--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,8 @@
         <version.finatra>${version.twitter.finatra}</version.finatra>
         <version.guice-injection>4.0</version.guice-injection>
 
+        <version.zookeeper>3.5.0-alpha</version.zookeeper>
+
         <major.minor>0.1</major.minor>
 
         <!-- Generic Logging -->
